# GANsWhat

./: .env  .gitignore  README.md  environment.yml  environment_mac.yml  global_utils.py
Ch0_Packages_Practice/: image_resize_alogrithms.py  image_transformer.py
Ch1_FFHQ_StyleGAN3/: generate_face.py
Ch1_FFHQ_StyleGAN3/stylegan_utils/: legacy.py
Ch1_FFHQ_StyleGAN3/stylegan_utils/torch_utils/: misc.py  training_stats.py
Ch1_StyleGAN3_Face_Inference/stylegan_utils/torch_utils/: persistence.py
Ch2_MNIST_GAN/: generate_digits.py  mnist_data_downloader.py  mnist_models.py  test_models.py  train_gan.py
Ch3_FFHQ_StyleGAN_Inversion/: face_inversion.py
stylegan_utils/: __init__.py  legacy.py  pyproject.toml  setup.cfg
stylegan_utils/tests/: test_import.py
stylegan_utils/torch_utils/: __init__.py  device_helper.py
stylegan_utils/torch_utils/ops/: bias_act.py
