[metadata]
name = stylegan_utils
version = 0.1.0
author = Mr.Veryy
author_email = mr.veryyy@gmail.com
description = Common utilities (dnnlib, legacy) extracted from StyleGAN projects
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=2.0
    numpy
